Fixed field jumping issue in Manage Rate Modal, changed to red color of the remove icon in Manage Rate Modal and Create invoice

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,9 @@ border-bottom: 1px solid #dfe0e1;
 .greenlink a { color:#36c157; }
 .greenlink a:hover { color:#2e9e49; }
 .redlink a { color:#da4830; }
+.redlink { color:#da4830; }
 .redlink a:hover { color:#c13b25; }
+.redlink:hover { color:#c13b25; }
 
 .buttons { margin: 25px 0;  }
 .buttons .btn { margin: 0 6px;  }
